--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 
     <!--Register Service Worker. this will cache the wasm / js scripts for offline use (for PWA functionality). -->
     <!-- Force refresh (Ctrl + F5) to load the latest files instead of cached files  -->
-    <script>
+    <!-- Currently disabled! -->
+    <!-- <script>
         // We disable caching during development so that we always view the latest version.
         if (
             "serviceWorker" in navigator &&
@@ -139,7 +140,7 @@
                 navigator.serviceWorker.register("sw.js");
             });
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
